# HandwritingLibs

./: .gitignore  CMakeLists.txt  main.cpp
assets/: painter_stroke.txt  painter_stroke2.txt  painter_stroke3.txt  painter_stroke4.txt  painter_stroke5.txt  stroke5.txt  stroke6.txt  stroke7.txt  strokes.txt  strokes10.txt  strokes11.txt  strokes2.txt  strokes3.txt  strokes4.txt  strokes9.txt  train.yml
include/: addAnalyzer.h  android-interface.h  character_recognizer.h  cluster_analysis.h  common.h  config.h  config.hpp  debugUtil.h  equAnalyzer.h  file-util.h  fiveAnalyzer.h  fracAnalyzer.h  fractionAnalyzer.h  image-util.h  json_util.h  linear_interpolation.h  log.h  mat-util.h  mat_util.h  painter.h  plusAnalyzer.h  powAnalyzer.h  random-forest.h  recognize-objects.h  recognizeObjects.h  recognizer.h  rowAnalyzer.h  stroke-classifier.h  strokeClassifier.h  trainer.h
include/fractionAnalyzer/: fractionAnalyzer.h
modules/: android-interface.cpp  debugUtil.cpp
modules/character_recognizer/: character_recognizer.cpp
modules/cluster_analysis/: cluster_analysis.cpp
modules/file_util/: file-util.cpp
modules/image_util/: image-util.cpp
modules/json_util/: json_util.cpp
modules/linear_interpolation/: linear_interpolation.cpp
modules/mat_util/: mat-util.cpp  mat_util.cpp
modules/painter/: painter.cpp
modules/random-forest/: random-forest.cpp
modules/recognizer/: recognizer.cpp
modules/stroke_classifier/: addAnalyzer.cpp  equAnalyzer.cpp  fiveAnalyzer.cpp  fracAnalyzer.cpp  fractionAnalyzer.cpp  plusAnalyzer.cpp  powAnalyzer.cpp  rowAnalyzer.cpp  stroke-classifier.cpp  strokeClassifier.cpp  util.cpp  util.hpp
modules/trainer/: label_character_map.json  label_character_map.txt  trainer.cpp
modules/type_util/: type-util.cpp
